--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@supabase/supabase-js": "^2.47.10",
     "base64-arraybuffer": "^1.0.2",
     "expo": "~52.0.23",
+    "expo-av": "~15.0.2",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-file-system": "~18.0.6",
@@ -38,6 +39,7 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
+    "moment": "^2.30.1",
     "patch-package": "^8.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -45,13 +47,13 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-pell-rich-editor": "^1.9.0",
     "react-native-reanimated": "~3.16.1",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.10.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "^13.12.5",
-    "expo-av": "~15.0.2"
+    "react-native-webview": "^13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
