--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@shopify/flash-list": "1.7.1",
     "@supabase/supabase-js": "^2.47.10",
     "axios": "^1.7.9",
     "base64-arraybuffer": "^1.0.2",
@@ -57,7 +58,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "^13.12.5",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "expo-dev-client": "~5.0.11"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
