--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-av": "~15.0.2",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.0.11",
     "expo-file-system": "~18.0.6",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.1",
@@ -43,6 +44,8 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.7",
     "expo-web-browser": "~14.0.2",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "patch-package": "^8.0.0",
     "react": "18.3.1",
@@ -58,12 +61,12 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "^13.12.5",
-    "react-navigation": "^5.0.0",
-    "expo-dev-client": "~5.0.11"
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.15",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
